<resources>
    <string name="app_name">Star2CD</string>

    <string name="hint_selected_date">Choisir une date</string>
    <string name="hint_selected_hour">Choisir une heure</string>
    <string name="choose">Choisir</string>
    <string name="pick_bus_line">Choisir la ligne de bus</string>
    <string name="pick_bus_direction">Choisir la direction</string>
    <string name="search">Rechercher</string>
    <string name="title_notification">Nouvelle version disponible</string>
    <string name="content_notification">Cliquez ici pour télécharger</string>
    <string name="progressbar_initialize">Initialisation</string>
    <string name="pick_stoptime">Choisir un horaire de passage</string>
    <string name="empty_inputs_message">Veuillez choisir une date et une heure.</string>
    <string name="route_detail_title">Détails de votre itinéraire</string>
    <string name="search_title">Rechercher</string>
    <string name="search_view_hint">Saisir le nom de l\'arrêt</string>
</resources>
