<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingEnd="20dp"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_selected_date"
        android:inputType="date"/>

    <Button
        android:id="@+id/dateButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/choose"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_selected_hour"
        android:inputType="none"/>

    <Button
        android:id="@+id/timeButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/choose"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/textViewBusLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pick_bus_line" />

    <Spinner
        android:id="@+id/spinnerBusLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewBusDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pick_bus_direction" />

    <Spinner
        android:id="@+id/spinnerBusDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:onClick="search"
        android:text="@string/search"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"/>

</LinearLayout>
