<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="50dp"
    android:stretchColumns="1"
    android:orientation="vertical">

    <TableRow android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/hint_selected_date"
            android:inputType="date" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/dateButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/choose"
            android:textColor="#FFFFFF" />
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/timeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_selected_hour"
            android:inputType="none" />
    </TableRow>


    <TableRow>

        <Button
            android:id="@+id/timeButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/choose"
            android:textColor="#FFFFFF" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textViewBusLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/pick_bus_line" />
    </TableRow>

    <TableRow>

        <Spinner
            android:id="@+id/spinnerBusLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textViewBusDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/pick_bus_direction" />
    </TableRow>

    <TableRow>

        <Spinner
            android:id="@+id/spinnerBusDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape"
            android:onClick="search"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/search"
            android:textColor="#FFFFFF" />

    </TableRow>

</TableLayout>